--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -8,8 +8,8 @@
 	color: white;
 }
 
-#make_black {
-	background-color: black;
+.make_grey {
+	background-color: #2f4a45;
 	color: white;
 }
 
@@ -22,18 +22,43 @@
 }
 
 .background_style {
-	background: url(/images/hmc.jpg) no-repeat center center fixed; 
+	background: url(typewriter.jpg) no-repeat center center fixed; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    height: 500px;
+}
 
+.background_one {
+	background-color: #088A85;
+	color: white;
+}
+
+.background_grey {
+	background-color: #2f4a45;
 }
 
 #big_name {
 	color: white;
-	font-family: 'Raleway', sans-serif;
+}
+
+h1 {
+	font-family: 'Georgia', serif;
+}
+h2 {
+	color: white;
+	font-family: 'Georgia', serif;
+}
+h3 {
+	font-family: 'Georgia', serif;
+}
+h4 {
+	font-family: 'Georgia', serif;
+}
+
+p {
+	font-family: 'Georgia', serif;
 }
 
 .center_text {
@@ -43,4 +68,11 @@
 .no_margin {
 	margin: 0px !important;
 	border: 0px !important;
+}
+
+.header_content {
+  position: relative;
+  text-align: center;
+  padding: 200px 15px 100px;
+  width: 100%;
 }
