--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -22,7 +22,7 @@
 }
 
 .background_style {
-	background: url(images/typewriter.jpg) no-repeat center center fixed; 
+	background: url("images/typewriter.jpg") no-repeat center center fixed; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
