--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -23,6 +23,9 @@
 
 .background_style {
 	background: url("images/typewriter.jpg") no-repeat center center fixed; 
+	-webkit-background-size: cover;
+   	-moz-background-size: cover;
+   	-o-background-size: cover;
    	background-size: cover;
    	height: 500px;
 }
