--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -21,6 +21,11 @@
 	color: white;
 }
 
+body {
+    background-image: url("typewriter.jpg");
+    background-color: #cccccc;
+}
+
 .background_style {
 	background-image: url("typewriter.jpg") no-repeat center center fixed; 
 	-webkit-background-size: cover;
