--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -21,6 +21,16 @@
 	color: white;
 }
 
+body {
+	background: url(images/typewriter.jpg) no-repeat center center fixed; 
+	-webkit-background-size: cover;
+   	-moz-background-size: cover;
+   	-o-background-size: cover;
+   	background-size: cover;
+   	height: 500px;
+   	display: block;	
+}
+
 .background_style {
 	background: url(typewriter.jpg) no-repeat center center fixed; 
 	-webkit-background-size: cover;
