--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -22,7 +22,7 @@
 }
 
 .background_style {
-	background: url(typewriter.jpg) no-repeat center center fixed;
+	background: url(stylesheets/images/typewriter.jpg) no-repeat center center fixed;
 	background-size: cover;
    	height: 500px;
    	display: block;
