--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -21,6 +21,14 @@
 	color: white;
 }
 
+html { 
+  background: url(typewriter.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 .background_style {
 	background: url(typewriter.jpg) no-repeat center center fixed;
 	background-size: cover;
