--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -45,11 +45,11 @@
 }
 
 h1 {
-	font-family: 'Patua One', cursive;
+	font-family: 'Didact Gothic', sans-serif;
 }
 h2 {
 	color: white;
-	font-family: 'Patua One', cursive;
+	font-family: 'Didact Gothic', sans-serif;
 }
 h3 {
 	font-family: 'Georgia', serif;
