--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -45,11 +45,13 @@
 }
 
 h1 {
-	font-family: 'Mada', sans-serif;
+	font-family: 'Playfair Display', serif;
+
 }
 h2 {
 	color: white;
-	font-family: 'Mada', sans-serif;
+	font-family: 'Playfair Display', serif;
+
 }
 h3 {
 	font-family: 'Georgia', serif;
