--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -45,13 +45,11 @@
 }
 
 h1 {
-	font-family: 'Playfair Display', serif;
-
+	font-family: 'Julius Sans One', sans-serif;
 }
 h2 {
 	color: white;
-	font-family: 'Playfair Display', serif;
-
+	font-family: 'Julius Sans One', sans-serif;
 }
 h3 {
 	font-family: 'Georgia', serif;
