--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -52,14 +52,14 @@ h2 {
 	font-family: 'Julius Sans One', sans-serif;
 }
 h3 {
-	font-family: 'Georgia', serif;
+	font-family: 'Prata', serif;
 }
 h4 {
-	font-family: 'Georgia', serif;
+	font-family: 'Prata', serif;
 }
 
 p {
-	font-family: 'Georgia', serif;
+	font-family: 'Prata', serif;
 }
 
 .center_text {
