--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -45,21 +45,21 @@
 }
 
 h1 {
-	font-family: 'Julius Sans One', sans-serif;
+	font-family: 'Prata', serif;
 }
 h2 {
 	color: white;
-	font-family: 'Julius Sans One', sans-serif;
+	font-family: 'Prata', serif;
 }
 h3 {
-	font-family: 'Prata', serif;
+	font-family: 'Didact Gothic', sans-serif;
 }
 h4 {
-	font-family: 'Prata', serif;
+	font-family: 'Didact Gothic', sans-serif;
 }
 
 p {
-	font-family: 'Prata', serif;
+	font-family: 'Didact Gothic', sans-serif;
 }
 
 .center_text {
