--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -45,11 +45,11 @@
 }
 
 h1 {
-	font-family: 'Prata', serif;
+	font-family: 'Julius Sans One', sans-serif;
 }
 h2 {
 	color: white;
-	font-family: 'Prata', serif;
+	font-family: 'Julius Sans One', sans-serif;
 	
 }
 h3 {
