--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -45,11 +45,11 @@
 }
 
 h1 {
-	font-family: 'News Cycle', sans-serif;
+	font-family: 'Scope One', serif;
 }
 h2 {
 	color: white;
-	font-family: 'News Cycle', sans-serif;
+	font-family: 'Scope One', serif;
 }
 h3 {
 	font-family: 'Amatica SC', cursive;
