--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -45,12 +45,12 @@
 }
 
 h1 {
-	font-family: 'Scope One', serif;
+	font-family: 'Arapey', serif;
 }
 
 h2 {
 	color: white;
-	font-family: 'Scope One', serif;
+	font-family: 'Arapey', serif;
 }
 h3 {
 	font-family: 'Amatica SC', cursive;
