--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -45,11 +45,11 @@
 }
 
 h1 {
-	font-family: 'Cormorant SC', serif;
+	font-family: 'Amatic SC', cursive;
 }
 h2 {
 	color: white;
-	font-family: 'Cormorant SC', serif;
+	font-family: 'Amatic SC', cursive;
 
 }
 h3 {
