--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -16,11 +16,13 @@
 .navbar-default .navbar-nav>li>a {
 	color: white;
 	font-family: 'Amatica SC', cursive;
+	font-size: 24pt;
 }
 
 .navbar-default .navbar-brand {
 	color: white;
 	font-family: 'Amatica SC', cursive;
+	font-size: 24pt;
 }
 
 .background_style {
