--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -88,6 +88,6 @@ p {
     display: block;
     margin: auto;
     max-width: 100%;
-    padding: 10px
+    padding: 10px 10px 10px 10px;
     float: center;
 }
