--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -70,13 +70,13 @@ h3, h4, p {
 	border: 0px !important;
 }
 
-/*
+
 .header_content {
   position: relative;
   text-align: center;
   padding: 200px 15px 100px;
   width: 100%;
-}*/
+}
 
 /* for project section images */
 .img-responsive {
