--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -70,7 +70,7 @@ h3, h4, p {
 	border: 0px !important;
 }
 
-
+/* main header text alignment */
 .header_content {
   position: relative;
   text-align: center;
