--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -90,3 +90,11 @@ h3, h4, p {
     padding: 10px 10px 10px 10px;
     float: center;
 }
+
+/* center div */
+.center {
+    margin: auto;
+    width: 50%;
+    border: 3px solid green;
+    padding: 10px;
+}
