--- a/stylesheets/artstylesheet.css
+++ b/stylesheets/artstylesheet.css
@@ -25,9 +25,9 @@
 
 /* background image (top) */
 .background_image {
-	background: url(./banner4.png) no-repeat;
-	position: fixed;
+	background: url(./banner4.png) no-repeat center center fixed;
 	height: 500px;
+	background-size: cover;
 	background-size: 1500px 500px;
 	top: -100px;
    	display: block;
