--- a/stylesheets/artstylesheet.css
+++ b/stylesheets/artstylesheet.css
@@ -11,7 +11,7 @@
 
 /* nav bar right elements */
 .navbar-default .navbar-nav>li>a {
-	color: #cda4c6;
+	color: white;
 	font-family: 'Amatica SC', cursive;
 	font-size: 16pt;
 }
