--- a/stylesheets/artstylesheet.css
+++ b/stylesheets/artstylesheet.css
@@ -18,7 +18,7 @@
 
 /* nav bar left elements */
 .navbar-default .navbar-brand {
-	color: #cda4c6;
+	color: white;
 	font-family: 'Amatica SC', cursive;
 	font-size: 18pt;
 }
