--- a/stylesheets/artstylesheet.css
+++ b/stylesheets/artstylesheet.css
@@ -26,7 +26,7 @@
 /* background image (top) */
 .background_image {
 	background: url(./banner4resized.png);
-	height: 500px;
+	height: auto;
 	background-size: contain;
 	background-repeat: no-repeat;  
   	background-attachment: scroll;  
