--- a/stylesheets/artstylesheet.css
+++ b/stylesheets/artstylesheet.css
@@ -27,7 +27,7 @@
 .background_image {
 	
 	background-color: #cda4c6;
-	background: url(./banner4resized.png) no-repeat center center fixed; 
+	background: url(./banner6.png) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
