--- a/stylesheets/artstylesheet.css
+++ b/stylesheets/artstylesheet.css
@@ -28,10 +28,7 @@
 	
 	background-color: #cda4c6;
 	background: url(./banner6.png) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+background-size: 100%;
 }
 
 /* teal background */
