--- a/stylesheets/artstylesheet.css
+++ b/stylesheets/artstylesheet.css
@@ -26,18 +26,13 @@
 /* background image (top) */
 .background_image {
 	
-  /* Set rules to fill background */
+ position: fixed; 
+  top: 0; 
+  left: 0; 
+	
+  /* Preserve aspet ratio */
+  min-width: 100%;
   min-height: 100%;
-  min-width: 1024px;
-	
-  /* Set up proportionate scaling */
-  width: 100%;
-  height: auto;
-	
-  /* Set up positioning */
-  position: fixed;
-  top: 0;
-  left: 0;
 }
 
 /* teal background */
