--- a/stylesheets/artstylesheet.css
+++ b/stylesheets/artstylesheet.css
@@ -31,8 +31,8 @@
 	left: 0; 
 	
   	/* Preserve aspet ratio */
-  	min-width: 100%;
-  	min-height: 100%;
+  	max-width: 100%;
+  	max-height: 100%;
 }
 
 /* teal background */
