--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,67 +1,103 @@
-/* make text colour white */
-#white_font {
-	color:white;
+body {
+  overflow-x: hidden;
+  font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-/* nav bar colour */
+h1,h2,h3,h4,h5,h6 {
+  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: 353535;
+}
+
+p {
+  font-size: 14px;
+  line-height: 1.75;
+}
+
+p.large {
+  font-size: 16px;
+}
+
+a:hover
+{
+  color: #fec503;
+}
+
 .nav_colour {
 	background-color: transparent;
 	color: white;
 }
 
-/* nav bar right elements */
 .navbar-default .navbar-nav>li>a {
+	font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	color: white;
-	font-family: 'Amatica SC', cursive;
-	font-size: 16pt;
+	font-size: 12pt;
 }
 
-/* nav bar left elements */
 .navbar-default .navbar-brand {
+	font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	color: white;
-	font-family: 'Amatica SC', cursive;
-	font-size: 18pt;
+	font-size: 14pt;
 }
 
-/* background image (top) */
 .background_image {
-	background: url(./typewriter.jpg) no-repeat center center fixed;
+	background: url(./Untitled-1.gif) no-repeat center center fixed;
 	background-size: cover;
-   	height: 500px;
+   	height: 750px;
    	display: block;
 	-webkit-background-size: cover;
    	-moz-background-size: cover;
    	-o-background-size: cover;
 }
 
-/* teal background */
-.background_teal {
-	background-color: #088A85;
-	color: white;
+/*purple background */
+.background_purple {
+	background-color: #d6c6da;
+	color: 353535;
 }
 
 /* white background */
 .background_white {
 	background-color: white;
-	color: black;
+	color: 353535;
 }
 
-/* dark green background */
-.background_darkgreen {
-	background-color: #2f4a45;
+/* dark purple background */
+.background_darkpurple {
+	background-color: #655379;
+  color: white;
 }
 
-h1 {
-	font-family: 'Amatic SC', cursive;
-	font-size: 40pt; 
+section {
+  padding: 100px 0;
 }
-h2 {
-	font-family: 'Amatic SC', cursive;
-	font-size: 35pt;
+
+@media (min-width: 768px) {
+  header .intro {
+    padding-top: 300px;
+    padding-bottom: 200px;
+  }
+  header .intro .subheading {
+    font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-style: italic;
+    font-size: 40px;
+    line-height: 40px;
+    margin-bottom: 25px;
+    color:white;
+  }
+  header .intro .heading {
+    font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 75px;
+    line-height: 75px;
+    margin-bottom: 50px;
+    color:white;
+  }
 }
-h3, h4, p {
-	font-family: 'Amatica SC', cursive;
-}
+
+
 
 /* center text */
 .center_text {
@@ -74,23 +110,24 @@ h3, h4, p {
 	border: 0px !important;
 }
 
-/* main header text alignment */
-.header_content {
-  position: relative;
+
+
+
+footer {
+  padding: 25px 0;
   text-align: center;
-  padding: 200px 15px 100px;
-  width: 100%;
 }
-
-/* for project section images */
-.img-responsive {
-    display: block;
-    margin: auto;
-    max-width: 100%;
-    padding: 10px 10px 10px 10px;
-    float: center;
+footer span.copyright {
+  line-height: 40px;
+  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  text-transform: uppercase;
+  text-transform: none;
+  text-align: center;
 }
-
-.projectimg:hover {
-    opacity: 0.5;
+footer ul.quicklinks {
+  margin-bottom: 0;
+  line-height: 40px;
+  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  text-transform: uppercase;
+  text-transform: none;
 }
