--- a/css/resume.css
+++ b/css/resume.css
@@ -12,7 +12,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Saira Extra Condensed', serif;
+  font-family: 'Unica One', cursive;
   font-weight: 700;
   text-transform: uppercase;
   color: #343a40;
@@ -30,7 +30,7 @@ h2 {
 .subheading {
   text-transform: uppercase;
   font-weight: 500;
-  font-family: 'Saira Extra Condensed', serif;
+  font-family: 'Unica One', cursive;
   font-size: 1.35rem;
 }
 
